# rust_chip8

./: .gitignore  Cargo.toml  README.md
chip_8_core/: Cargo.toml
chip_8_core/src/: chip_8.rs  globals.rs  interface.rs  lib.rs  runner.rs
chip_8_core/src/interface/: graphical.rs  terminal.rs
chip_8_desktop/: Cargo.toml
chip_8_desktop/src/: main.rs
chip_8_desktop/src/interface/: terminal.rs
chip_8_wasm/: Cargo.toml  build.sh  build_wasm.sh  index.html  index.js  package-lock.json
chip_8_wasm/src/: lib.rs
src/: chip_8.rs  cpu.rs  display_canvas.rs  globals.rs  interface.rs  main.rs
src/interface/: graphical.rs  terminal.rs
