[package]
name = "rust_chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-iter = "1.1.1"
byteorder = "1.4.3"
crossterm = "0.26.1"
hertz = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.18"
rand = "0.8.5"
sdl2 = "0.35.2"
simple-logging = "2.0.2"
