[package]
name = "chip_8_core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.3.0", features = ["derive"] }
crossterm = "0.26.1"
device_query = "1.1.3"
hertz = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.18"
rand = "0.8.5"
sdl2 = "0.35.2"
simple-logging = "2.0.2"

