[package]
name = "chip_8_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Node',
  'Window',
]
